syntax = "proto3";

message Event {
  uint64 subscription_id = 1;
  uint64 publication_id = 2;
  uint64 payload_serializer_id = 3;

  // options
  uint64 publisher = 4;
  string publisher_authid = 5;
  string publisher_authrole = 6;
  string topic = 7;
}
