syntax = "proto3";

message Yield {
  uint64 request_id = 1;
  bytes payload = 2;
  uint64 payload_serializer = 3;

  // options
  bool progress = 4;
}
